--- a/package.json
+++ b/package.json
@@ -226,6 +226,8 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@reactour/tour": "^2.8.0",
     "dayjs": "^1.10.7",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.4",
